--- a/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/qa-list/subpages/qa-detail/index.wxml
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/qa-list/subpages/qa-detail/index.wxml
@@ -1,4 +1,5 @@
 <wxs module="TIME" src="/utils/filters/time.wxs" />
+<wxs module="IMG" src="/utils/filters/img.wxs" />
 
 <view class="container">
   <view class="question-info-wrap">
@@ -21,7 +22,7 @@
     <view class="answer-list">
       <view class="answer-item" wx:for="{{answerList}}" wx:key="index">
         <view class="user-info row">
-          <image class="user-avatar" src="{{item.userInfo.avatar}}?x-oss-process=image/format,webp" lazy-load />
+          <image class="user-avatar" src="{{IMG.webp(item.userInfo.avatar)}}" lazy-load />
           <view class="user-name">{{item.userInfo.nickname}}</view>
         </view>
         <view class="answer-content">{{item.content}}</view>
