--- a/pages/subpages/mall/components/evaluation-item/index.wxml
+++ b/pages/subpages/mall/components/evaluation-item/index.wxml
@@ -1,8 +1,9 @@
 <wxs module="TIME" src="/utils/filters/time.wxs" />
+<wxs module="IMG" src="/utils/filters/img.wxs" />
 
 <view class="evaluation-item">
   <view class="user-info-wrap row">
-    <image class="user-avatar" src="{{item.userInfo.avatar}}?x-oss-process=image/format,webp" />
+    <image class="user-avatar" src="{{IMG.webp(item.userInfo.avatar)}}" />
     <view class="user-info">
       <view class="user-name">{{item.userInfo.nickname}}</view>
       <view class="comment-date">{{TIME.timeDiff(item.createdAt)}}</view>
