--- a/pages/subpages/mine/merchant/components/meal-ticket-order-item/index.wxml
+++ b/pages/subpages/mine/merchant/components/meal-ticket-order-item/index.wxml
@@ -1,9 +1,10 @@
 <wxs module="ORDER" src="../../../utils/mealTicketOrder.wxs" />
+<wxs module="IMG" src="/utils/filters/img.wxs" />
 
 <view class="order-item" catchtap="navToDetail">
   <view class="order-header row between">
     <view class="user-info row" catchtap="contact">
-      <image class="user-avatar" src="{{item.userInfo.avatar}}?x-oss-process=image/format,webp" mode="aspectFill" lazy-load />
+      <image class="user-avatar" src="{{IMG.webp(item.userInfo.avatar)}}" mode="aspectFill" lazy-load />
       <view class="user-name omit single">{{item.userInfo.nickname}}</view>
       <image style="width: 20rpx; height: 20rpx;" src="/images/arrow_gray.png" />
     </view>
