--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -1,6 +1,8 @@
 <import src="index.skeleton.wxml"/>
 <template is="skeleton" wx:if="{{!pageLoaded}}" />
 
+<wxs module="IMG" src="/utils/filters/img.wxs" />
+
 <view class="nav-bar {{navBarActive ? 'active': ''}}" style="padding-top: {{statusBarHeight}}px">
   <view class="promoter-icon" wx:if="{{superiorInfo}}" bindtap="checkPromoter">
     <image class="promoter-avatar" src="{{superiorInfo.avatar ? (superiorInfo.avatar + '?x-oss-process=image/format,webp') : 'https://static.tiddler.cn/mp/default_avatar.png'}}" />
@@ -29,7 +31,7 @@
       data-scene="{{item.scene}}"
       data-param="{{item.param}}"
     >
-      <image class="banner-img" mode="widthFix" src="{{item.cover}}?x-oss-process=image/format,webp" />
+      <image class="banner-img" mode="widthFix" src="{{IMG.webp(item.cover)}}" />
     </swiper-item>
   </swiper>
   <view class="banner-dots" style="width: {{12 * bannerList.length}}px;" wx:if="{{bannerList.length > 1}}">
