--- a/pages/subpages/home/media/live/components/anchor-capsule/index.wxml
+++ b/pages/subpages/home/media/live/components/anchor-capsule/index.wxml
@@ -1,7 +1,8 @@
 <wxs module="NUM" src="/utils/filters/num.wxs" />
+<wxs module="IMG" src="/utils/filters/img.wxs" />
 
 <view class="anchor-capsule row" catchtap="navToAnchorCenter">
-  <image class="anchor-avatar avatar-default" src="{{anchorInfo.avatar}}?x-oss-process=image/format,webp" />
+  <image class="anchor-avatar avatar-default" src="{{IMG.webp(anchorInfo.avatar)}}" />
   <view class="anchor-capsule-content">
     <view class="anchor-name omit single">{{anchorInfo.nickname}}</view>
     <view class="audience-count">{{NUM.over(audienceCount, 100000)}}人观看</view>
