--- a/pages/subpages/mine/promoter/subpages/customer/components/customer-item/index.wxml
+++ b/pages/subpages/mine/promoter/subpages/customer/components/customer-item/index.wxml
@@ -1,8 +1,9 @@
 <wxs module="TIME" src="/utils/filters/time.wxs" />
+<wxs module="IMG" src="/utils/filters/img.wxs" />
 
 <view class="customer-item">
   <view class="info-wrap">
-    <image class="avatar" src="{{item.avatar}}?x-oss-process=image/format,webp" lazy-load />
+    <image class="avatar" src="{{IMG.webp(item.avatar)}}" lazy-load />
     <view class="info">
       <view class="name">{{ item.nickname }}</view>
       <view class="mobile">{{ mobile }}</view>
