--- a/pages/subpages/home/theme/night-trip/components/trip-item/index.wxml
+++ b/pages/subpages/home/theme/night-trip/components/trip-item/index.wxml
@@ -1,6 +1,8 @@
+<wxs module="IMG" src="/utils/filters/img.wxs" />
+
 <view class="trip-item" bindtap="checkDetail">
   <view class="header">
-    <image class="bg" src="{{item.scenicCover}}?x-oss-process=image/format,webp" mode="aspectFill" />
+    <image class="bg" src="{{IMG.webp(item.scenicCover)}}" mode="aspectFill" />
     <view class="more-btn">
       <view>了解更多</view>
       <image class="arrow" src="https://static.tiddler.cn/mp/trip_type/night_trip/arrow.png" />
