--- a/pages/subpages/mine/setting/subpages/user-info-setting/index.wxml
+++ b/pages/subpages/mine/setting/subpages/user-info-setting/index.wxml
@@ -1,8 +1,10 @@
+<wxs module="IMG" src="/utils/filters/img.wxs" />
+
 <view class="container">
   <view class="header row center">
     <image class="bg" src="{{userInfo.bg ? (userInfo.bg + '?x-oss-process=image/format,webp') : 'https://static.tiddler.cn/mp/bg.webp'}}" mode="aspectFill" />
     <view class="avatar-wrap" bindtap="cropAvatar">
-      <image class="avatar" src="{{userInfo.avatar}}?x-oss-process=image/format,webp" mode="aspectFill" />
+      <image class="avatar" src="{{IMG.webp(userInfo.avatar)}}" mode="aspectFill" />
       <view class="avatar-edit-btn row center">
         <image class="edit-icon" src="./images/edit.png" />
       </view>
