--- a/pages/subpages/home/media/live/live-play/components/live-notice/index.wxml
+++ b/pages/subpages/home/media/live/live-play/components/live-notice/index.wxml
@@ -1,5 +1,6 @@
 <wxs module="TIME" src="/utils/filters/time.wxs" />
 <wxs module="STRING" src="/utils/filters/string.wxs" />
+<wxs module="IMG" src="/utils/filters/img.wxs" />
 
 <view class="live-notice" style="padding-top: {{statusBarHeight + 44}}px;">
   <view class="cover-wrap">
@@ -11,7 +12,7 @@
 
   <view class="anchor-info" bindtap="navToUserCenter">
     <view class="avatar-wrap">
-      <image class="anchor-avatar avatar-default" src="{{roomInfo.anchorInfo.avatar}}?x-oss-process=image/format,webp" />
+      <image class="anchor-avatar avatar-default" src="{{IMG.webp(roomInfo.anchorInfo.avatar)}}" />
       <image class="follow-icon" wx:if="{{!isFollow}}" bindtap="follow" src="./images/follow.png" />
     </view>
     <view class="anchor-name omit single">{{roomInfo.anchorInfo.nickname}}</view>
