feat: 重构userInfo，拆分社交数据和商家信息

--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -31,15 +31,15 @@
       <view class="data-wrap">
         <view class="data-item">
           <view class="data-title">获赞</view>
-          <view class="data">{{userInfo ? NUM.over(userInfo.beLikedTimes, 100000) : 0}}</view>
+          <view class="data">{{socialStats ? NUM.over(socialStats.beLikedTimes, 100000) : 0}}</view>
         </view>
         <view class="data-item" bindtap="checkFollowList">
           <view class="data-title">关注</view>
-          <view class="data">{{userInfo ? NUM.over(userInfo.followedAuthorNumber, 100000) : 0}}</view>
+          <view class="data">{{socialStats ? NUM.over(socialStats.followedAuthorNumber, 100000) : 0}}</view>
         </view>
         <view class="data-item" bindtap="checkFanList">
           <view class="data-title">粉丝</view>
-          <view class="data">{{userInfo ? NUM.over(userInfo.fansNumber, 100000) : 0}}</view>
+          <view class="data">{{socialStats ? NUM.over(socialStats.fansNumber, 100000) : 0}}</view>
         </view>
       </view>
     </view>
