feat: 家乡代言人

--- a/pages/subpages/mine/promoter/index.wxml
+++ b/pages/subpages/mine/promoter/index.wxml
@@ -17,7 +17,7 @@
     <swiper-item wx:for="{{4}}" wx:key="index">
       <view class="upgradation-wrap">
         <view class="upgradation-card {{curLevel !== index + 1 ? 'unselect' : ''}}">
-          <image class="upgradation-bg" src="https://static.tiddler.cn/mp/promoter/level_{{index + 1}}/achievement_bg.png" />
+          <image class="upgradation-bg" src="https://static.tiddler.cn/mp/promoter/level_{{index + 1}}/achievement_bg.webp" />
           <view class="status-tag">
             {{userInfo.promoterInfo.level === index + 1 ? '当前等级' : userInfo.promoterInfo.level > index + 1 ? '已超越' : '待升级'}}
           </view>
