--- a/pages/subpages/common/new-year/index.wxss
+++ b/pages/subpages/common/new-year/index.wxss
@@ -33,6 +33,7 @@
 }
 .bg-wrap .bg {
   width: 750rpx;
+  height: 1256rpx;
 }
 .count-down-wrap {
   position: absolute;
@@ -191,6 +192,7 @@
   padding: 8rpx;
   width: 160rpx;
   height: 200rpx;
+  font-size: 0;
   background: #ffffff;
   border-radius: 28rpx;
   overflow: hidden;
@@ -203,8 +205,10 @@
   height: 140rpx;
   object-fit: cover;
   border-radius: 22rpx;
+  background: linear-gradient(0, #f7d5ff 0%, #fbeeff 50%, #f7d5ff 100%);
 }
 .prize-name {
+  margin-top: 10rpx;
   font-size: 20rpx;
   font-weight: bold;
   color: #420f9d;
@@ -314,6 +318,7 @@
 }
 .goods {
   width: calc((100% - 18rpx)/2);
+  font-size: 0;
   background: #fff;
   border-radius: 32rpx;
   overflow: hidden;
